--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hurtownia wodociągowo kanalizacyjna Budo-Instal Sławomir Czyżewski</title>
+    <title>Budo-Instal Sławomir Czyżewski - Hurtownia wodociągowo kanalizacyjna</title>
     <meta name="description" content="Hurtownia z materiałami wod kan">
     <meta name="keywords" content="wodociągi, kanalizacja">
     <meta name="author" content="Tomasz Czyżewski">
@@ -23,6 +23,7 @@
     </header>
     <main></main>
     <footer></footer>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
