Semantic nav changed

--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
 
 <body>
     <header>
-        <nav>
-
-        </nav>
     </header>
+    <nav></nav>
     <main></main>
     <footer></footer>
     <script src="./js/script.js"></script>
