--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
 <body>
     <header>
+        <h1>Budo-Instal</h1>
+        <span>Sławomir Czyżewski</span>
     </header>
     <nav></nav>
     <main></main>
