Added ul and li

--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
         <h1>Budo-Instal</h1>
         <span>Sławomir Czyżewski</span>
     </header>
-    <nav></nav>
+    <nav>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </nav>
     <main></main>
     <footer></footer>
     <script src="./js/script.js"></script>
