--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
 
 <body>
     <header>
-        <h1>Budo-Instal</h1>
-        <span>Sławomir Czyżewski</span>
+        <div class="header-container">
+            <div class="logo">
+                <h1>Budo-Instal</h1>
+                <span>Sławomir Czyżewski</span>
+            </div>
+        </div>
     </header>
     <nav>
         <ul>
