Created logo and navigation

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Budo-Instal Sławomir Czyżewski - Hurtownia wodociągowo kanalizacyjna</title>
+    <title>Budo Instal - Hurtownia z materiałami wodociągowo kanalizacyjnymi</title>
     <meta name="description" content="Hurtownia z materiałami wod kan">
     <meta name="keywords" content="wodociągi, kanalizacja">
     <meta name="author" content="Tomasz Czyżewski">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -20,17 +20,20 @@
         <div class="header-container">
             <div class="logo">
                 <h1>Budo-Instal</h1>
-                <span>Sławomir Czyżewski</span>
+                <p class="owner-name">Sławomir Czyżewski</p>
             </div>
         </div>
+        <nav>
+            <div class="navigation">
+                <ul class="navigation-items">
+                    <li class="nav item-1">Home</li>
+                    <li class="nav item-2">Oferta</li>
+                    <li class="nav item-3">O nas</li>
+                    <li class="nav item-4">Kontakt</li>
+                </ul>
+            </div>
+        </nav>
     </header>
-    <nav>
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
-    </nav>
     <main></main>
     <footer></footer>
     <script src="./js/script.js"></script>
