--- a/index.html
+++ b/index.html
@@ -22,17 +22,15 @@
                 <h1>Budo-Instal</h1>
                 <p class="owner-name">Sławomir Czyżewski</p>
             </div>
-        </div>
-        <nav>
-            <div class="navigation">
+            <nav class="navigation">
                 <ul class="navigation-items">
-                    <li class="nav item-1">Home</li>
-                    <li class="nav item-2">Oferta</li>
-                    <li class="nav item-3">O nas</li>
-                    <li class="nav item-4">Kontakt</li>
+                    <li class="nav-links">Home</li>
+                    <li class="nav-links">Oferta</li>
+                    <li class="nav-links">O nas</li>
+                    <li class="nav-links">Kontakt</li>
                 </ul>
-            </div>
-        </nav>
+            </nav>
+        </div>
     </header>
     <main></main>
     <footer></footer>
