Modified header and navigation structure in HTML

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
                 <h1>Budo-Instal</h1>
                 <p class="owner-name">Sławomir Czyżewski</p>
             </div>
-            <nav class="navigation">
-                <ul class="navigation-items">
-                    <li class="nav-links">Home</li>
-                    <li class="nav-links">Oferta</li>
-                    <li class="nav-links">O nas</li>
-                    <li class="nav-links">Kontakt</li>
+            <nav class="nav">
+                <ul class="nav-items">
+                    <li class="nav-links"><a href="#">home</a></li>
+                    <li class="nav-links"><a href="#">oferta</a></li>
+                    <li class="nav-links"><a href="#">o nas</a></li>
+                    <li class="nav-links"><a href="#">kontakt</a></li>
                 </ul>
             </nav>
         </div>
