Added styles to Header and Navigation

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/6f551a8353.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -24,7 +25,7 @@
             </div>
             <nav class="nav">
                 <ul class="nav-items">
-                    <li class="nav-links"><a href="#">home</a></li>
+                    <li class="nav-links"><a href="#"><i class="fa-solid fa-house"></i></a></li>
                     <li class="nav-links"><a href="#">oferta</a></li>
                     <li class="nav-links"><a href="#">o nas</a></li>
                     <li class="nav-links"><a href="#">kontakt</a></li>
