--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
                 <p class="owner-name">Sławomir Czyżewski</p>
             </div>
             <nav class="nav">
-                <ul class="nav-items">
-                    <li class="nav-links"><a href="#"><i class="fa-solid fa-house"></i></a></li>
-                    <li class="nav-links"><a href="#">oferta</a></li>
-                    <li class="nav-links"><a href="#">o nas</a></li>
-                    <li class="nav-links"><a href="#">kontakt</a></li>
-                </ul>
+                <div class="wrapper">
+                    <ul class="nav-items">
+                        <li class="nav-links"><a href="#"><i class="fa-solid fa-house"></i></a></li>
+                        <li class="nav-links"><a href="#">oferta</a></li>
+                        <li class="nav-links"><a href="#">o nas</a></li>
+                        <li class="nav-links"><a href="#">kontakt</a></li>
+                    </ul>
+                </div>
             </nav>
         </div>
     </header>
