Created the new header and the navigation (new html structure and new css styles)

--- a/index.html
+++ b/index.html
@@ -7,33 +7,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Budo Instal - Hurtownia z materiałami wodociągowo kanalizacyjnymi</title>
     <meta name="description" content="Hurtownia z materiałami wod kan">
-    <meta name="keywords" content="wodociągi, kanalizacja">
+    <meta name="keywords"
+        content="materiały wodociągowe, materiały kanalizacyjne, hydranty, zasuwy kołnierzowe, włazy kanalizacyjne, rury pvc, rury pp">
     <meta name="author" content="Tomasz Czyżewski">
+    <link rel="shortcut icon" type="image/png" href="./img/budo-instal-website-favicon-color.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/6f551a8353.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <header>
+        <div class="info-bar">
+            <span>telefon: +48 665 026 828</span>
+            <span class="info-email"><a href="mailto:biuro@budoinstal.eu">e-mail: biuro@budoinstal.eu</a></span>
+        </div>
         <div class="header-container">
-            <div class="logo">
-                <h1>Budo-Instal</h1>
-                <p class="owner-name">Sławomir Czyżewski</p>
-            </div>
-            <nav class="nav">
-                <div class="wrapper">
-                    <ul class="nav-items">
-                        <li class="nav-links"><a href="#"><i class="fa-solid fa-house"></i></a></li>
-                        <li class="nav-links"><a href="#">oferta</a></li>
-                        <li class="nav-links"><a href="#">o nas</a></li>
-                        <li class="nav-links"><a href="#">kontakt</a></li>
-                    </ul>
-                </div>
+            <img src="./img/budo-instal-transparent-logo.png" alt="Logo firmy Budo Instal" class="logo">
+            <button class="burger-icon"><i class="fa-regular fa-bars" style="color: #1F2D5A;"></i></button>
+            <nav class="nav-items">
+                <a href="#">home</a>
+                <a href="#">oferta</a>
+                <a href="#">o nas</a>
+                <a href="#">kontakt</a>
             </nav>
         </div>
+
     </header>
     <main></main>
     <footer></footer>
