--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Budo Instal - Hurtownia z materiałami wodociągowo kanalizacyjnymi</title>
-    <meta name="description" content="Hurtownia z materiałami wod kan">
+    <meta name="description"
+        content="Hurtownia z materiałami do budowy sieci wodociągowej oraz sieci kanalizacji sanitarnej">
     <meta name="keywords"
-        content="materiały wodociągowe, materiały kanalizacyjne, hydranty, zasuwy kołnierzowe, włazy kanalizacyjne, rury pvc, rury pp">
+        content="materiały wodociągowe, materiały kanalizacyjne, hydranty przeciwpożarowe, zasuwy kołnierzowe, włazy kanalizacyjne, rury pvc, rury pp, rury wodiciągowe, rury kanalizacyjne">
     <meta name="author" content="Tomasz Czyżewski">
     <link rel="shortcut icon" type="image/png" href="./img/budo-instal-website-favicon-color.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,23 +21,33 @@
 
 <body>
     <header>
-        <div class="info-bar">
-            <span>telefon: +48 665 026 828</span>
-            <span class="info-email"><a href="mailto:biuro@budoinstal.eu">e-mail: biuro@budoinstal.eu</a></span>
+        <div class="header">
+            <div class="info-bar">
+                <span>kontakt: +48 665 026 828</span>
+                <span class="info-email"><a href="mailto:biuro@budoinstal.eu">biuro@budoinstal.eu</a></span>
+            </div>
+            <div class="header-container">
+                <a href="./index.html"><img src="./img/budo-instal-transparent-logo.png" alt="Logo firmy Budo Instal"
+                        class="logo"></a>
+                <button class="burger-icon"><i class="fa-regular fa-bars" style="color: #1F2D5A;"></i></button>
+                <nav class="nav-items">
+                    <a class="nav-item" href="#">home</a>
+                    <a class="nav-item" href="#">oferta</a>
+                    <a class="nav-item" href="#">o nas</a>
+                    <a class="nav-item" href="#">kontakt</a>
+                </nav>
+            </div>
+            <div class="hero-banner">
+                <div class="hero-img"></div>
+                <div class="background-img"></div>
+                <h1>Materiały budowlane do sieci wodociągowej i kanalizacyjnej</h1>
+            </div>
         </div>
-        <div class="header-container">
-            <img src="./img/budo-instal-transparent-logo.png" alt="Logo firmy Budo Instal" class="logo">
-            <button class="burger-icon"><i class="fa-regular fa-bars" style="color: #1F2D5A;"></i></button>
-            <nav class="nav-items">
-                <a href="#">home</a>
-                <a href="#">oferta</a>
-                <a href="#">o nas</a>
-                <a href="#">kontakt</a>
-            </nav>
-        </div>
-
     </header>
-    <main></main>
+    <main>
+
+
+    </main>
     <footer></footer>
     <script src="./js/script.js"></script>
 </body>
