Added phone number link on info bar and some code optimalization

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
         <div class="header">
             <div class="info-bar">
-                <span>kontakt: +48 665 026 828</span>
+                <span class="info-phone"><a href="tel:+48665026828">kontakt: +48 665 026 828</a></span>
                 <span class="info-email"><a href="mailto:biuro@budoinstal.eu">biuro@budoinstal.eu</a></span>
             </div>
             <div class="header-container">
