Added responsive footer

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+
     <header>
         <div class="header">
             <div class="info-bar">
@@ -44,11 +45,32 @@
             </div>
         </div>
     </header>
+
     <main>
 
-
+        <section class="newsletter">
+            <div class="newsletter-container">
+                <h2 class="section-title">newsletter</h2>
+                <p class="get-email-text">Zapisz się do naszego newslettera</p>
+            </div>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-container">
+            <div class="legal-rules">
+                <a href="./index.html"><img src="./img/budo-instal-transparent-logo.png" alt="Logo firmy Budo Instal"
+                        class="footer-logo"></a>
+                <div class="legal-links">
+                    <a class="legal-link" href="#">Polityka plików cookies</a>
+                    <a class="legal-link" href="#">Polityka prywatności</a>
+                    <a class="legal-link" href="#">Informacje o plikach</a>
+                </div>
+                <div class="copyright">
+                    <p class="legal-link">© 2023 Budo-Instal 2 Sławomir Czyżewski</p>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="./js/script.js"></script>
 </body>
 
