--- a/index.html
+++ b/index.html
@@ -20,13 +20,10 @@
 </head>
 
 <body>
-    <div class="fixed">
-        <div class="contact-info">
-            <div class="info-bar">
-                <span class="info-phone"><a href="tel:+48665026828">kontakt: +48 665 026 828</a></span>
-                <span class="info-email"><a href="mailto:biuro@budoinstal.eu">biuro@budoinstal.eu</a></span>
-            </div>
-        </div>
+
+
+    <!-- <div class="fixed">
+        
         <nav class="nav-bar">
             <div class="nav-container">
                 <a href="./index.html"><img src="./img/budo-instal-transparent-logo.png" alt="Logo firmy Budo Instal"
@@ -36,27 +33,77 @@
                         <span class="hamburger-inner"></span>
                     </span>
                 </button>
-                <nav class="nav-items">
-                    <a class="nav-item" href="#">oferta</a>
-                    <a class="nav-item" href="#">o nas</a>
-                    <a class="nav-item" href="#contact">kontakt</a>
-                </nav>
+                <div class="nav-desktop">
+                    <a class="nav-desktop__item" href="#">oferta</a>
+                    <a class="nav-desktop__item" href="#">o nas</a>
+                    <a class="nav-desktop__item" href="#contact">kontakt</a>
+                </div>
+            </div>
+            <div class="nav-mobile">
+                <a class="nav-desktop__item" href="#">oferta</a>
+                <a class="nav-desktop__item" href="#">o nas</a>
+                <a class="nav-desktop__item" href="#contact">kontakt</a>
             </div>
         </nav>
-    </div>
-    <header class="header-container">
-        <div class="hero-banner">
-            <div class="background-img">
-                <div class="hero-img"></div>
-                <h1>Materiały budowlane do sieci wodociągowej i kanalizacyjnej</h1>
+    </div> -->
+
+    <!-- <nav class="nav">
+        <div class="nav__box">
+            <div class="nav__links">
+                <a class="nav__link" href="./women.html">women</a>
+                <a class="nav__link" href="./about-us.html">about us</a>
+                <a class="nav__link" href="./become-a-model.html">become a model</a>
+                <a class="nav__link" href="./contact.html">contact</a>
             </div>
+            <div class="nav__insta-box flex-center">
+                <a class="nav__insta-icon" href="https://www.instagram.com/nudyess_models" aria-label="Instagram"
+                target="_blank" rel="noreferrer noopener">
+            </a>
+            </div>
+        </div>
+    </nav> -->
+
+    <header class="header">
+        <nav>
+            <div class="header__nav-mobile">
+                <a class="header__nav-item" href="#">oferta</a>
+                <a class="header__nav-item" href="#">o nas</a>
+                <a class="header__nav-item" href="#contact">kontakt</a>
+            </div>
+            <div class="header__nav-desktop">
+                <a class="header__nav-item" href="#">oferta</a>
+                <a class="header__nav-item" href="#">o nas</a>
+                <a class="header__nav-item" href="#contact">kontakt</a>
+            </div>
+        </nav>
+        <div class="header__info-box">
+            <div class="header__info-bar">
+                <a class="header__info-phone" href="tel:+48665026828">kontakt: +48 665 026 828</a>
+                <a class="header__info-email" href="mailto:biuro@budoinstal.eu">biuro@budoinstal.eu</a>
+            </div>
+        </div>
+        <div class="header__nav-box">
+            <a href="./index.html"><img src="./img/budo-instal-transparent-logo.png" alt="Logo firmy Budo Instal"
+                    class="header__nav-logo"></a>
+            <button class="hamburger hamburger--collapse" type="button">
+                <span class="hamburger-box">
+                    <span class="hamburger-inner"></span>
+                </span>
+            </button>
+        </div>
+        
+        <div class="header__offer-box">
+            <div class="header__single-offer">
+
+            </div>
+            <div class="header__single-offer">
+
+            </div>
+
         </div>
     </header>
 
     <main>
-
-
-
 
         <section class="contact-section" id="contact">
             <div class="contact">
