--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="./css/hamburgers.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@3.0.1/dist/cookieconsent.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
-
 <body>
     <nav class="nav-mobile">
         <a class="nav-mobile__item" href="#">oferta</a>
@@ -43,21 +43,15 @@
             </button>
         </div>
     </header>
-
-
-
-
-
-
     <main>
-        <!-- <div class="header__offer-box">
+        <div class="header__offer-box">
             <div class="header__single-offer">
     
             </div>
             <div class="header__single-offer">
     
             </div>
-        </div> -->
+        </div>
         <section class="contact-section" id="contact">
             <div class="contact">
                 <div class="contact-container">
@@ -156,6 +150,7 @@
             });
         }
     </script>
+    <script src="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@3.0.1/dist/cookieconsent.umd.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
